# disarm64_test_data

./: .gitignore  Cargo.toml  Readme.md  gen-diff.py  prepare-once.py
src/: main.rs
test/classes/aarch64_misc/: aarch64_misc-disarm64.unhandled  aarch64_misc.bin.xz  aarch64_misc.stats
test/classes/addsub_carry/: addsub_carry-binutils.lst.xz  addsub_carry-llvm.lst.xz  addsub_carry.bin.xz  addsub_carry.stats
test/classes/addsub_ext/: addsub_ext-binutils.lst.xz  addsub_ext-llvm.lst.xz  addsub_ext.bin.xz
test/classes/addsub_imm/: addsub_imm-binutils.lst.xz  addsub_imm-llvm.lst.xz  addsub_imm.bin.xz  addsub_imm.stats
test/classes/addsub_shift/: addsub_shift-binutils.lst.xz  addsub_shift-llvm.lst.xz  addsub_shift.bin.xz
test/classes/asimdall/: asimdall-binutils.lst.xz  asimdall-disarm64.unhandled  asimdall-llvm.lst.xz  asimdall.bin.xz  asimdall.stats
test/classes/asimddiff/: asimddiff-binutils.lst.xz  asimddiff-llvm.lst.xz  asimddiff.bin.xz  asimddiff.stats
test/classes/asimdelem/: asimdelem-binutils.lst.xz  asimdelem-disarm64.unhandled  asimdelem-llvm.lst.xz  asimdelem.bin.xz  asimdelem.stats
test/classes/asimdext/: asimdext-binutils.lst.xz  asimdext-disarm64.unhandled  asimdext-llvm.lst.xz  asimdext.bin.xz  asimdext.stats
test/classes/asimdimm/: asimdimm-binutils.lst.xz  asimdimm-disarm64.unhandled  asimdimm-llvm.lst.xz  asimdimm.bin.xz  asimdimm.stats
test/classes/asimdins/: asimdins-binutils.lst.xz  asimdins-disarm64.unhandled  asimdins-llvm.lst.xz  asimdins.bin.xz  asimdins.stats
test/classes/asimdmisc/: asimdmisc-binutils.lst.xz  asimdmisc.bin.xz  (+3 more)
(+456 files in other folders)
