[package]
name = "disarm64_test_data"
version = "0.1.0"
edition = "2021"
authors = ["kromych <kromych@users.noreply.github.com>"]

[[bin]]
name = "norm"
path = "./src/main.rs"

[dependencies]
anyhow = "1"
bitfield-struct = "0.6"
bitflags = { version = "2.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
clap-num = "1"
env_logger = "0.11"
goblin = "0.8"
log = "0.4"
proc-macro2 = { version = "1", default-features = false }
quote = { version = "1", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.26"
strum_macros = "0.26"
